--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,3 +1,4 @@
+<% reload = TradeSetting.where(trade_type: :reload).any? %>
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -10,6 +11,7 @@
     <%= javascript_include_tag 'application' %>
   </head>
   <body class="<%='dev-back-ground' if Rails.env.development?%>">
+    <span id="reload" data-reload="<%= reload %>"></span>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-default">
       <div class="container">
